<resources>
    <string name="app_name">android_introduction_personal_project</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="please_input_name">이름을 입력해주세요.</string>
    <string name="please_input_id">영문 / 숫자 6자리 이상</string>
    <string name="please_input_password">비밀번호를 입력해주세요</string>
    <string name="please_input_check_password">비밀번호를 확인해주세요</string>
    <string name="brith">생년월일</string>
    <string name="please_input_birth">생년월일 8자리를 입력해 주세요</string>
    <string-array name="mbti_array">
        <item>MBTI를 선택해주세요.</item>
        <item>INTJ</item>
        <item>INTP</item>
        <item>INFJ</item>
        <item>INFP</item>
        <item>ISTJ</item>
        <item>ISTP</item>
        <item>ISTJ</item>
        <item>ISTP</item>
        <item>ENTJ</item>
        <item>ENTP</item>
        <item>ENFJ</item>
        <item>ENFP</item>
        <item>ESTJ</item>
        <item>ESTP</item>
        <item>ESFJ</item>
        <item>ESFP</item>
    </string-array>
    <string-array name="domain_value">
        <item>이메일 선택</item>
        <item>naver.com</item>
        <item>gmail.com</item>
        <item>hanmail.net</item>
        <item>yahoo.co.kr</item>
        <item>korea.com</item>
        <item>nate.com</item>
        <item>직접 입력</item>
    </string-array>

</resources>