<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="48dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/indigo_logo"
            app:layout_constraintBottom_toTopOf="@id/tv_id"
            app:layout_constraintDimensionRatio="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/tv_id"
            style="@style/title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/id"
            app:layout_constraintBottom_toTopOf="@id/et_id"
            app:layout_constraintStart_toStartOf="@id/et_id"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_id"
            style="@style/edit_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_id"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_id"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_id"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edit_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/inactive_rectangle_button"
            android:paddingHorizontal="30dp"
            android:text="@string/login"
            android:textColor="#172A87"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4DFFFFFF"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_up" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_no_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="계정이 없으신가요?"
            android:textColor="#99FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_sign_up"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="가입하기"
            android:textColor="#C8FFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_no_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_no_id"
            app:layout_constraintTop_toTopOf="@id/tv_no_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>